# ren

./: CMakeLists.txt  README.org  format.sh
lib/libren/: CMakeLists.txt
lib/libren/include/ren/: area_light.h  bsdf.h  disk.h  film.h  light.h  mat.h  object.h  path_tracer.h  photon_map.h  photon_mapper.h  pinhole_camera.h  plane.h  point_light.h  ray.h  ren.h  renderer.h  rng.h  sampling.h  scene.h  scene_factory.h  shape.h  sphere.h  surface_diff.h  transform.h  triangle.h  typedefs.h  vec.h
lib/libren/src/: area_light.cc  bsdf.cc  disk.cc  film.cc  light.cc  object.cc  path_tracer.cc  photon_mapper.cc  pinhole_camera.cc  plane.cc  point_light.cc  ray.cc  renderer.cc  rng.cc  sampling.cc  scene.cc  scene_factory.cc  shape.cc  sphere.cc  surface_diff.cc  triangle.cc
src/: main.cc
